--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first github repository</title>
+    <title>My first git repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
+    </div>
     
 </body>
 </html>
