--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h3>My first website</h3>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
+    </div>
+    <div>
+        <h3>My secend blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
     </div>
     
