--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,14 @@
         <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
     </div>
+    <div>
+        <h2>how to incremental code</h2>
+        <ul>
+            <li>git add .</div></li>
+            <li>git commit -m"your massage"</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
