--- a/Index.html
+++ b/Index.html
@@ -22,11 +22,14 @@
     <div>
         <h2>how to incremental code</h2>
         <ul>
-            <li>git add .</div></li>
+    <div>
+        <ul>
+            <li>git add .</li>
             <li>git commit -m"your massage"</li>
             <li>git push</li>
         </ul>
     </div>
+    <p>This is git and github projects</p>
     
 </body>
 </html>
