--- a/index.html.html
+++ b/index.html.html
@@ -29,8 +29,7 @@
             <li>git push</li>
         </ul>
     </div>
-    <p style="text-align: center; color:red;">This is git and github projects</p><br>
-
+    <p>This is git and github projects</p>
     
 </body>
 </html>
