--- a/index.html (2).html
+++ b/index.html (2).html
@@ -29,7 +29,7 @@
             <li>git push</li>
         </ul>
     </div>
-    <p style="text-align: center; color:red;">This is git and github projects</p>
+    <p style="text-align: center; color:red;">This is git and github projects</p><br>
 
     
 </body>
