--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Practice</h1>
     <div>
         <h3>My first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore delectus sed nulla aut. Iste atque explicabo cumque, blanditiis quas hic similique neque asperiores. Reiciendis laboriosam quo officia tenetur accusamus.</p>
@@ -29,8 +30,7 @@
             <li>git push</li>
         </ul>
     </div>
-    <p style="text-align: center; color:red;">This is git and github projects</p>
-
+    <p style="text-align: center; color: rgb(243, 52, 61);">This is git and github projects</p>
     
 </body>
 </html>
