--- a/Index.html
+++ b/Index.html
@@ -32,5 +32,8 @@
     </div>
     <p style="text-align: center; color: rgb(243, 52, 61);">This is git and github projects</p>
     
+    <button id="sub">submit</button>
+    <button>clear</button>
+    
 </body>
 </html>
