few problem my git

--- a/index1.html
+++ b/index1.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1><p>This is paragraph</p></h1>
+    <p>I can not set up the name of git name (index1.html). Every time the browser talk me to set the name of RUL</p>
 </body>
 </html>
